--- a/ui2022/src/styles.scss
+++ b/ui2022/src/styles.scss
@@ -355,10 +355,6 @@ app-profile-page {
   }
 }
 
-.ng-scroll-content {
-  height: 100%;
-}
-
 .mat-snack-bar-container {
   max-width: 45vw !important;
 }
